improved dashboard and config docker